# crypto-pulse

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  update-card.yml
crypto_pulse/: __init__.py  api.py  cli.py  dashboard.py  pulse.py  sample_data.py  sparkline.py  svgcard.py
scripts/: generate_card.py
tests/: test_pulse.py  test_sparkline.py  test_svgcard.py
