[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-pulse"
version = "1.0.0"
description = "A live terminal crypto dashboard and self-updating README SVG card, powered by the CoinStats Crypto API."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "scsona" }]
keywords = ["crypto", "cryptocurrency", "dashboard", "tui", "coinstats", "bitcoin", "terminal", "svg"]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = ["rich>=13.0"]

[project.urls]
Homepage = "https://github.com/scsona/crypto-pulse"
"CoinStats Crypto API" = "https://coinstats.app/api/"

[project.scripts]
crypto-pulse = "crypto_pulse.cli:main"

[tool.setuptools]
packages = ["crypto_pulse"]
